Ajustado rota de get das goals do usuário
