# swagger.json
@@ -270,6 +270,110 @@
                     }
                 }
             }
+        },
+        "/goals/NewGoal" : {
+            "post" : {
+                "description" : "Adiciona uma nova meta ao usuário",
+                "tags" : ["Goals"],
+                "security": [ {"bearerAuth": [] }],
+                "requestBody" : {
+                    "content" : {
+                        "application/json" : {
+                            "schema" : {
+                                "$ref" :  "#/components/schemas/NewGoal"
+                            }
+                        },
+                        "examples":{
+                            "NewGoal":{
+                                "value":{
+                                    "parentId": "6122c3a5b005a50216500f16",
+                                    "parentName": "@teste",
+                                    "nameGoal": "Comprar Celular",
+                                    "valor" : 1000
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses":{
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "400":{
+                        "description": "Usuário não encontrado na base de dados !"
+                    }
+                }
+            }
+        },
+        "/goals/DeleteGoal" : {
+            "delete" : {
+                "description" : "Deleta a meta do usuário",
+                "tags" : ["Goals"],
+                "security": [ {"bearerAuth": [] }],
+                "requestBody" : {
+                    "content" : {
+                        "application/json" : {
+                            "schema" : {
+                                "$ref" :  "#/components/schemas/DeleteGoal"
+                            }
+                        },
+                        "examples":{
+                            "DeleteGoal":{
+                                "value":{
+                                    "_id": "6122c3a5b005a50216500f16"
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses":{
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "400":{
+                        "description": "Meta não encontrada na base de dados !"
+                    },
+                    "200": {
+                        "description" : "Meta excluída com sucesso"
+                    }
+                }
+            }
+        },
+        "/goals/GetGoalsUser/{userId}" : {
+            "get": {
+                "description": "Busca a lista de metas do usuário",
+                "tags": ["Goals"],
+                "security": [ {"bearerAuth": [] }],
+                "parameters": [
+                    {
+                        "name": "userId",
+                        "in": "path",
+                        "description": "Id do usuário",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "400":{
+                        "description": "Usuário não encontrado na base de dados !"
+                    },
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json" : {
+                                "schema" : {
+                                    "type" : "array",
+                                    "items": {
+                                        "$ref": "#/components/schemas/ListGoals"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
         }
     },
     "components":{
@@ -399,6 +503,57 @@
                         "type" : "string"
                     },
                     "valor": {
+                        "type": "number",
+                        "multipleOf": 0.01
+                    }
+                }
+            },
+            "NewGoal" : {
+                "type" : "object",
+                "properties" : {
+                    "parentId" : {
+                        "type" : "string"
+                    },
+                    "parentName" : {
+                        "type" : "string"
+                    },
+                    "nameGoal" : {
+                        "type" : "string"
+                    },
+                    "valueGoal": {
+                        "type": "number",
+                        "multipleOf": 0.01
+                    }
+                }
+            },
+            "DeleteGoal" : {
+                "type" : "object",
+                "properties" : {
+                    "_id" : {
+                        "type" : "string"
+                    }
+                }
+            },
+            "ListGoals" : {
+                "type": "object",
+                "properties": {
+                    "_id":{
+                        "type": "string"
+                    },
+                    "parentId":{
+                        "type": "string"
+                    },
+                    "parentName":{
+                        "type": "string"
+                    },
+                    "nameGoal":{
+                        "type": "string"
+                    },
+                    "valueGoal":{
+                        "type": "number",
+                        "multipleOf": 0.01
+                    },
+                    "currentGoalValue":{
                         "type": "number",
                         "multipleOf": 0.01
                     }
